# polytope

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
lib/: linmath.h  lodepng.cpp  lodepng.h
lib/googletest-1.10.0/docs/: advanced.md  faq.md  pkgconfig.md  primer.md
lib/googletest-1.10.0/scripts/: pump.py
lib/googletest-1.10.0/src/: gtest-death-test.cc  gtest.cc
lib/googletest-1.10.0/test/: googletest-json-output-unittest.py  gtest_json_test_utils.py  gtest_test_utils.py  gtest_xml_test_utils.py
lib/googletest-1.7.0/: CMakeLists.txt
lib/googletest-1.7.0/cmake/: internal_utils.cmake
lib/googletest-1.7.0/codegear/: gtest_link.cc
lib/googletest-1.7.0/docs/: AdvancedGuide.md  FAQ.md
lib/googletest-1.7.0/samples/: sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
lib/googletest-1.7.0/scripts/: gen_gtest_pred_impl.py  upload.py
lib/googletest-1.7.0/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-typed-test.cc  gtest.cc
lib/googletest-1.7.0/test/: gtest-death-test_ex_test.cc  gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-listener_test.cc  gtest-options_test.cc  gtest-param-test2_test.cc  gtest-param-test_test.cc  gtest-param-test_test.h  gtest-port_test.cc  gtest-printers_test.cc  gtest-test-part_test.cc  gtest-tuple_test.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest-unittest-api_test.cc  gtest_break_on_failure_unittest.py  gtest_break_on_failure_unittest_.cc  gtest_catch_exceptions_test.py  gtest_catch_exceptions_test_.cc  gtest_color_test_.cc  gtest_env_var_test.py  gtest_env_var_test_.cc  gtest_environment_test.cc  gtest_filter_unittest.py  gtest_filter_unittest_.cc  gtest_help_test_.cc  gtest_list_tests_unittest.py  gtest_list_tests_unittest_.cc  gtest_no_test_unittest.cc  gtest_output_test.py  (+18 more)
scenes/: minimum-absolute.pbrt  minimum-emptyworld-missingcamera.pbrt  minimum-emptyworld.pbrt  minimum-worldwithlight.pbrt  minimum.pbrt  test-scene.blend  test.dae  three-balls.pbrt  two-balls.pbrt
scenes/bunny/: bunny.pbrt
scenes/bvh-test/: bvh-test.pbrt  bvh-test.ply  other.ply  single.ply
scenes/common/: floor.ply
scenes/cornell/: cornell.pbrt
scenes/dragon/: dragon-instancing.pbrt  dragon.pbrt
scenes/lighttest/: lighttest.pbrt  triangle.ply
scenes/pbrt-book/: book.pbrt
scenes/teapot/: floor.ply  teapot-normals.ply  teapot.pbrt  teapot_converted.ply
scenes/test/: floor-ascii.ply
scenes/triangle-one/: one-triangle.ply  triangle-one.pbrt
src/: Constants.h  Main.cpp  Tracer.cpp  Tracer.h  main.cpp
src/cameras/: AbstractCamera.cpp  AbstractCamera.h  CameraSettings.cpp  CameraSettings.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/cpu/: constants.h  main.cpp
src/cuda/: check_error.h  context.cpp  context.h  gpu_memory_manager.cpp  gpu_memory_manager.h  main.cpp  png_output.cpp  png_output.h
src/exporters/: OBJExporter.cpp  OBJExporter.h
src/films/: AbstractFilm.cpp  AbstractFilm.h  PNGFilm.cpp  PNGFilm.h
src/filters/: AbstractFilter.cpp  AbstractFilter.h  BoxFilter.cpp  BoxFilter.h
src/gl/: GLRenderer.cpp  GLRenderer.h  bb_vao.h  frag.glsl  gl_recorder.h  gl_renderer.cpp  gl_renderer.h  main.cpp  mesh_vao.h  shaders.cpp  shaders.h  vert.glsl
src/integrators/: AbstractIntegrator.cpp  AbstractIntegrator.h  DebugIntegrator.cpp  DebugIntegrator.h  PathTraceIntegrator.cpp  PathTraceIntegrator.h
src/lights/: AbstractLight.cpp  AbstractLight.h  PointLight.cpp  PointLight.h  ShapeLight.cpp  ShapeLight.h  SphereLight.cpp  SphereLight.h
src/parsers/: AbstractFileParser.cpp  AbstractFileParser.h  OBJFileParser.cpp  OBJFileParser.h  PBRTFileParser.cpp  PBRTFileParser.h
src/runners/: AbstractRunner.cpp  AbstractRunner.h  PixelRunner.cpp  PixelRunner.h  TileRunner.cpp  TileRunner.h
src/samplers/: AbstractSampler.cpp  AbstractSampler.h  CenterSampler.cpp  CenterSampler.h  GridSampler.cpp  GridSampler.h  HaltonSampler.cpp  HaltonSampler.h  samplers.cpp  samplers.h
src/scenes/: AbstractScene.cpp  AbstractScene.h  BVHNode.cpp  NaiveScene.cpp  NaiveScene.h  SceneBuilder.cpp  SceneBuilder.h
src/shading/: Material.cpp  Material.h  ReflectanceSpectrum.cpp  ReflectanceSpectrum.h  SpectralPowerDistribution.cpp  SpectralPowerDistribution.h  Spectrum.cpp  Spectrum.h  spectrum.h
src/shapes/: AbstractShape.cpp  AbstractShape.h  Sphere.cpp  Sphere.h  SphereTesselator.cpp  SphereTesselator.h  Tesselators.cpp  Tesselators.h  TriangleMesh.cpp  TriangleMesh.h  abstract_mesh.h  triangle.cpp  triangle.h  triangle_mesh.ispc  triangle_mesh_ispc.h
src/structures/: BoundingBox.h  Intersection.cpp  Intersection.h  Matrix4x4.cpp  Matrix4x4.h  Normal.cpp  Normal.h  Point.cpp  Point.h  Point2.cpp  Point2.h  Ray.cpp  Ray.h  Sample.cpp  Sample.h  Transform.cpp  Transform.h  Vector.cpp  Vector.h  Vectors.cpp  Vectors.h  point.cpp  point.h
src/utilities/: Common.h  FileParser.cpp  FileParser.h  GeometryCalculations.h  GlobalDefines.h  Logger.cpp  Logger.h  Options.h  OptionsParser.cpp  OptionsParser.h
test/: gtest.cpp
tests/: BoundingBox.cpp  IntersectionTests.cpp  Matrix4x4.cpp  MirrorBRDF.cpp  Point.cpp  TestBoundingBox.cpp  TestCommon.cpp  TestFileParser.cpp  TestIntersectionTests.cpp  TestMatrix4x4.cpp  TestMirrorBRDF.cpp  TestOBJFileParser.cpp  TestOBJParser.cpp  TestPBRTFileParser.cpp  TestPLYFileParser.cpp  TestPLYParser.cpp  TestPoint.cpp  TestSphereTesselator.cpp  TestTesselators.cpp  TestTransform.cpp  TestTriangleCutting.cpp  TestTriangleMeshISPC.cpp  TestTriangleSplitting.cpp  TestVector.cpp  Transform.cpp  TriangleMesh.cpp  Vector.cpp  random_number_generator_tests.cpp  test_bvh.cpp  thread_pool_tests.cpp  triangle_filter_tests.cpp
tests/cuda/: test_bvh_traversal.cpp
tests/parsers/: test_obj_parser.cpp  test_ply_parser.cpp
tests/shading/: test_mirror_brdf.cpp
tests/shapes/: TestTesselators.cpp  test_mesh.cpp  test_mesh_bvh_split.cpp  test_mesh_linear_aos.cpp  test_mesh_linear_soa.cpp
(+218 files in other folders)
